# kintomo

./: README.md  pyproject.toml
data/: data.0001.vtk  idefix.ini
notebooks/: double_spheres.ipynb  from_idefix_outputs.ipynb  keplerian_disk.ipynb
notebooks/.ipynb_checkpoints/: isovelocity-checkpoint.ipynb
src/kintomo/: __init__.py  _typing.py  ktm.py
