[project]
name = "kintomo"
version = "0.1.0"
description = "Python library to create optically thick kinematic toy models and explore their kinematics, given a user-defined structure and velocity, projected on a grid."
readme = "README.md"
authors = [
    { name = "gwf", email = "ysengrin9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "gpgi>=2.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nonos>=0.19.1",
    "numpy>=2.3.5",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
